--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,10 +128,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=3
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -174,6 +174,7 @@ ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
+MapBuildDataRegistry="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1096,7 +1097,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1127,6 +1128,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1152,4 +1155,11 @@ PlayerStart.HLOD=True
 PlayerStart.WorldPartition=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+MapBuildDataRegistry.Lighting=True
+
+[MRU]
+MRUItem0=/Game/SeriousGames_Levels/ForestScene
+
+[AssetEditorToolkitTabLocation]
+/Game/SeriousGames_Levels/ForestScene_BuiltData.ForestScene_BuiltData=1
 
