--- a/Serious_Games/Config/DefaultEngine.ini
+++ b/Serious_Games/Config/DefaultEngine.ini
@@ -28,6 +28,7 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 
 r.Shadow.Virtual.Enable=1
 r.VirtualTextures=True
+r.VT.EnableAutoImport=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
