--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,6 +101,7 @@ LastExecutedLaunchName=DESKTOP-LITE
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -274,6 +275,17 @@ LandscapeEditorObject="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionConstant3Vector="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object\" \"Object.DefaultValue\" "
+MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" \"Object.Layers.Layers[2]\" "
+MaterialExpressionScalarParameter="\"Object\" "
+MaterialExpressionRuntimeVirtualTextureOutput="\"Object\" "
+MaterialExpressionCustomOutput="\"Object\" "
+MaterialExpressionWorldPosition="\"Object\" "
+MaterialExpressionComponentMask="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1196,7 +1208,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures
+ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1669,6 +1681,27 @@ RuntimeVirtualTextureVolume.VirtualTexture=True
 RuntimeVirtualTextureVolume.VirtualTextureBuild=True
 RuntimeVirtualTextureVolume.Tags=True
 RuntimeVirtualTextureVolume.HLOD=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionRuntimeVirtualTextureOutput.MaterialExpression=True
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
@@ -1677,6 +1710,7 @@ MRUItem1=/Game/SeriousGames_Levels/ForestScene
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bRealtimeMaterialViewport=False
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
@@ -1768,6 +1802,8 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 /Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material.Grass_Material=1
 /Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour.Colour=1
 /Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height.Height=1
+/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material.Grass_Material=1
+/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape.landcape=1
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.RuntimeVirtualTextureVolume;/Engine/Transient.ActorFactoryRuntimeVirtualTextureVolume_0
@@ -1776,11 +1812,13 @@ RecentlyPlaced=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
-MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
-MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
-MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
+MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
+MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
+MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
+MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1840,6 +1878,7 @@ bExportLocalTime=True
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=True
 FbxImportUI.Mesh=True
+RuntimeVirtualTextureVolume.TransformFromBounds=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
