--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -286,6 +286,9 @@ MaterialExpressionRuntimeVirtualTextureOutput="\"Object\" "
 MaterialExpressionCustomOutput="\"Object\" "
 MaterialExpressionWorldPosition="\"Object\" "
 MaterialExpressionComponentMask="\"Object\" "
+MaterialEditorInstanceConstant="\"Object\" "
+MaterialInstanceConstant="\"Object\" "
+MaterialInstance="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1241,6 +1244,8 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1702,6 +1707,10 @@ MaterialExpressionWorldPosition.MaterialExpression=True
 MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
 MaterialExpressionComponentMask.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+LandscapeEditorObject.Change Component Size=True
 
 [MRU]
 MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
@@ -1795,6 +1804,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings.Move Forward 
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 
 [AssetEditorToolkitTabLocation]
 /Game/SeriousGames_Levels/ForestScene_BuiltData.ForestScene_BuiltData=1
@@ -1813,12 +1823,13 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPers
 
 [ContentBrowserRecent]
 MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
-MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
-MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
-MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
-MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
-MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
+MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
+MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
+MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
+MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1992,7 +2003,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [MaterialEditor]
 PrimType=1
@@ -2140,4 +2151,9 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
