--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -276,7 +276,7 @@ Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
-MaterialExpression="\"Object\" "
+MaterialExpression="\"Object\" \"Object.DefaultValue\" "
 MaterialExpressionConstant3Vector="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" \"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object\" \"Object.DefaultValue\" "
@@ -1211,7 +1211,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass
+ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1823,12 +1823,12 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPers
 
 [ContentBrowserRecent]
 MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
-MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
-MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
-MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
-MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
-MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
-MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
+MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
+MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
+MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
+MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
+MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
 MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
