--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,6 +133,7 @@ LastLevel=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material.Grass_Material
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1211,7 +1212,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures
+ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1822,10 +1823,10 @@ RecentlyPlaced=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
-MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
-MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
-MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
+MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
+MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
 MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
 MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
 MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
