--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -305,6 +305,9 @@ MaterialExpressionPanner="\"Object\" "
 AssetViewerSettings="\"Object\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
+MaterialExpressionDivide="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1227,7 +1230,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1761,6 +1764,22 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+MaterialExpressionDivide.MaterialExpressionDivide=True
+MaterialExpressionDivide.MaterialExpression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.Placement=True
+FoliageType_InstancedStaticMesh.InstanceSettings=True
+FoliageType_InstancedStaticMesh.Scalability=True
+FoliageType_InstancedStaticMesh.Physics=True
+FoliageType_InstancedStaticMesh.VirtualTexture=True
+FoliageType_InstancedStaticMesh.HLOD=True
 
 [MRU]
 MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
@@ -1770,6 +1789,7 @@ MRUItem1=/Game/SeriousGames_Levels/ForestScene
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
@@ -1869,22 +1889,23 @@ MaterialInstanceConstant=
 /Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material_Inst2.Grass_Material_Inst2=1
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.RuntimeVirtualTextureVolume;/Engine/Transient.ActorFactoryRuntimeVirtualTextureVolume_0
 RecentlyPlaced=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass.Grass;
+RecentlyPlaced=/Script/Engine.RuntimeVirtualTextureVolume;/Engine/Transient.ActorFactoryRuntimeVirtualTextureVolume_0
 RecentlyPlaced=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material_Inst2
-MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass
-MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
-MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
-MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
-MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
-MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
-MRUItem7=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
-MRUItem8=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass
+MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material_Inst2
+MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Untitled-1_copy1
+MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
+MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
+MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
+MRUItem7=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Height
+MRUItem8=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Colour
+MRUItem9=/Game/SeriousGames_Levels/Forest_Scene/Assets/Grass_Material
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2058,7 +2079,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [MaterialEditor]
 PrimType=1
@@ -2206,6 +2227,8 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+BrushRadius=208.160751
+BrushFalloff=0.851999998
 
 [MaterialInstanceEditor]
 bShowGrid=False
