--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -308,6 +308,9 @@ StreamableRenderAsset="\"Object\" "
 MaterialExpressionDivide="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
+FoliageType_InstancedStaticMesh="\"Object\" "
+FoliageType="\"Object\" "
+LandscapeGizmoRenderComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1230,7 +1233,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass
+ContentBrowserDrawer.SelectedPaths=/Game/SeriousGames_Levels/Forest_Scene/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1895,10 +1898,10 @@ RecentlyPlaced=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass
-MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material_Inst2
-MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Untitled-1_copy1
-MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem0=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material
+MRUItem1=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass
+MRUItem2=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/Grass_Material_Inst2
+MRUItem3=/Game/SeriousGames_Levels/Forest_Scene/Assets/Virtual_Textures/Untitled-1_copy1
 MRUItem4=/Game/SeriousGames_Levels/Forest_Scene/ForestScene
 MRUItem5=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape
 MRUItem6=/Game/SeriousGames_Levels/Forest_Scene/Assets/grass/landcape_Inst
@@ -2227,11 +2230,25 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-BrushRadius=208.160751
+ToolStrength=0.0920000002
+BrushRadius=619.873169
 BrushFalloff=0.851999998
 
 [MaterialInstanceEditor]
 bShowGrid=False
 bDrawGrid=False
 PrimType=1
+
+[FoliageEdit]
+Radius=300.401855
+PaintDensity=1
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000012
+IsInSingleInstantiationMode=False
+IsInSpawnInCurrentLevelMode=False
+SingleInstantiationPlacementMode=0
 
