--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ CurrentPosGridSize=6
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1989,15 +1989,15 @@ bMaterialQualityUsed[3]=0
 PrimType=1
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [MRU]
 MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
 MRUItem1=/Game/OurProject/Maps/CabinInWoods
 
 [LandscapeEdit]
-ToolStrength=0.268000007
-BrushRadius=134.210785
+ToolStrength=0.164000005
+BrushRadius=366.554016
 FlattenMode=2
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
@@ -2015,6 +2015,7 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+BrushFalloff=0.172000006
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
