--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ CurrentPosGridSize=6
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -148,7 +148,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=1080.000 Y=336.000
+ScreenPosition=X=634.000 Y=314.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1996,8 +1996,8 @@ MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
 MRUItem1=/Game/OurProject/Maps/CabinInWoods
 
 [LandscapeEdit]
-ToolStrength=0.164000005
-BrushRadius=366.554016
+ToolStrength=0.0560000017
+BrushRadius=717.069336
 FlattenMode=2
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
@@ -2015,7 +2015,7 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-BrushFalloff=0.172000006
+BrushFalloff=0.611999989
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
