--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,14 +131,10 @@ CurrentPosGridSize=6
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test.test
-OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2.test2
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -203,8 +199,8 @@ StreamableRenderAsset="\"Object\" "
 MapBuildDataRegistry="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSampleParameter="\"Object\" "
 MaterialExpressionRuntimeVirtualTextureSample="\"Object\" "
-MaterialExpressionTextureSampleParameter2D="\"Object\" "
-MaterialExpressionTextureSampleParameter="\"Object\" "
+MaterialExpressionTextureSampleParameter2D="\"Object\" \"Object.ChannelNames\" "
+MaterialExpressionTextureSampleParameter="\"Object\" \"Object.ChannelNames\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
 LandscapeEditorObject="\"Object\" "
@@ -212,7 +208,7 @@ LandscapeGizmoRenderComponent="\"Object\" "
 RuntimeVirtualTexture="\"Object\" "
 Landscape="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
 LandscapeProxy="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
-PartitionActor="\"Object.VirtualTexture.RuntimeVirtualTextures\" "
+PartitionActor=
 MaterialExpressionLandscapeLayerBlend="\"Object\" \"Object.Layers\" "
 MaterialExpressionVectorParameter="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -299,16 +295,18 @@ ResonanceAudioSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
-<<<<<<< Updated upstream
 FbxImportUI="\"Object\" "
-=======
-<<<<<<< HEAD
+FbxImportUI="\"Object\" "
+None=======
+None=======
 FoliageType_InstancedStaticMesh="\"Object\" "
 FoliageType="\"Object\" "
-=======
-FbxImportUI="\"Object\" "
->>>>>>> e674c240e1b6fc68f2ce745cd97c2cd33a001aa3
->>>>>>> Stashed changes
+MaterialExpressionMultiply="\"Object\" "
+MaterialExpressionConstant="\"Object\" "
+MaterialExpressionTwoSidedSign="\"Object\" "
+MaterialExpressionTextureCoordinate="\"Object\" "
+MaterialExpressionComponentMask="\"Object\" "
+MaterialExpressionOneMinus="\"Object\" "
 
 [Directories2]
 UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1252,7 +1250,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/flowers
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1270,7 +1268,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/flowers
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1449,15 +1447,15 @@ MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 PreviewMaterial.PhysicalMaterial=True
-PreviewMaterial.Material=True
+PreviewMaterial.Material=False
 PreviewMaterial.PhysicalMaterialMask=True
 PreviewMaterial.Translucency=True
 PreviewMaterial.TranslucencySelfShadowing=True
 PreviewMaterial.Usage=True
 PreviewMaterial.Mobile=True
-PreviewMaterial.ForwardShading=True
+PreviewMaterial.ForwardShading=False
 PreviewMaterial.Group Sorting=True
-PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.PostProcessMaterial=False
 PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
@@ -1488,7 +1486,7 @@ PointLight.HLOD=True
 PointLight.WorldPartition=True
 PointLight.Actor=True
 StaticMesh.StaticMeshMaterials=True
-StaticMesh.NaniteSettings=True
+StaticMesh.NaniteSettings=False
 StaticMesh.LODCustomMode=True
 StaticMesh.LOD0=True
 StaticMesh.LodSettings=True
@@ -1816,9 +1814,9 @@ Engine.PerQualityLevelProperty=True
 InputSettings.MouseProperties=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
-<<<<<<< Updated upstream
-=======
-<<<<<<< HEAD
+None=======
+None=======
+None=======
 FoliageType_InstancedStaticMesh.Mesh=True
 FoliageType_InstancedStaticMesh.Painting=True
 FoliageType_InstancedStaticMesh.Placement=True
@@ -1827,8 +1825,6 @@ FoliageType_InstancedStaticMesh.Scalability=True
 FoliageType_InstancedStaticMesh.Physics=True
 FoliageType_InstancedStaticMesh.VirtualTexture=True
 FoliageType_InstancedStaticMesh.HLOD=True
-=======
->>>>>>> Stashed changes
 FbxImportUI.Mesh=True
 FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
@@ -1837,12 +1833,23 @@ FbxImportUI.FbxFileInformation=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
-<<<<<<< Updated upstream
-=======
->>>>>>> e674c240e1b6fc68f2ce745cd97c2cd33a001aa3
->>>>>>> Stashed changes
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionTwoSidedSign.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
+MaterialExpressionComponentMask.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G.orangeflower_G;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G.pinkflower_G;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S.pinkflower_S;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G.yellowflower_G;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2.test2;
@@ -1859,14 +1866,11 @@ RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Red.MI_Solid_Red;
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Grey.MI_Solid_Grey;
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Yellow.MI_Solid_Yellow;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_Gray_02.MI_PrototypeGrid_Gray_02;
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_Gray.MI_PrototypeGrid_Gray;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
@@ -1955,26 +1959,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst2
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/Virtual_Textures/color
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/grass/landcape
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/Virtual_Textures/Height
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/Virtual_Textures/Colour
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem14=/Game/OurProject/Maps/CabinInWoods
-MRUItem15=/Game/LevelPrototyping/Materials/MI_Solid_Brown
-MRUItem16=/Game/LevelPrototyping/Materials/MI_Solid_Grey
-MRUItem17=/Game/LevelPrototyping/Materials/MI_Solid_Green
-MRUItem18=/Game/LevelPrototyping/Materials/MI_Solid_Red
-MRUItem19=/Game/LevelPrototyping/Materials/MI_Solid_Yellow
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_S
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem15=/Game/OurProject/Maps/CabinInWoods
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -1997,9 +2001,23 @@ MRUItem19=/Game/LevelPrototyping/Materials/MI_Solid_Yellow
 /Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat=1
 /Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test.test=1
 /Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2.test2=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material.flower_material=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G.blueflower_G=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_S.blueflower_S=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G.orangeflower_G=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S.orangeflower_S=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S.pinkflower_S=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G.pinkflower_G=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G.purpleflower_G=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S.purpleflower_S=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G.whiteflower_G=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S.whiteflower_S=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G.yellowflower_G=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S.yellowflower_S=1
+/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst.flower_material_Inst=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
@@ -2102,6 +2120,8 @@ PaletteThumbnailScale=0.300000012
 IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
+Radius=224.553223
+PaintDensity=0.440000117
 
 [DetailCategoriesAdvanced]
 Landscape.LOD=False
@@ -2109,6 +2129,7 @@ RuntimeVirtualTexture.Layout=False
 FbxImportUI.Material=False
 FbxImportUI.Mesh=False
 FbxImportUI.Miscellaneous=False
+FoliageType_InstancedStaticMesh.Painting=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2188,8 +2209,8 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=True
-bImportTextures=True
+bImportMaterials=False
+bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
