--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ CurrentPosGridSize=6
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -309,7 +309,7 @@ MaterialExpressionComponentMask="\"Object\" "
 MaterialExpressionOneMinus="\"Object\" "
 
 [Directories2]
-UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/FirstPerson/Maps
+UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1959,24 +1959,24 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem1=/Game/StarterContent/Maps/StarterMap
-MRUItem2=/Game/OurProject/Maps/CabinInWoods
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_S
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem2=/Game/StarterContent/Maps/StarterMap
+MRUItem3=/Game/OurProject/Maps/CabinInWoods
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
+MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
+MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_S
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material
 MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2
 MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test
 
@@ -2085,10 +2085,10 @@ PrimType=1
 PreserveScaleRatio=True
 
 [MRU]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem1=/Game/StarterContent/Maps/StarterMap
-MRUItem2=/Game/OurProject/Maps/CabinInWoods
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem2=/Game/StarterContent/Maps/StarterMap
+MRUItem3=/Game/OurProject/Maps/CabinInWoods
 
 [LandscapeEdit]
 ToolStrength=0.0560000017
@@ -2308,5 +2308,5 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
