--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,10 +131,15 @@ CurrentPosGridSize=6
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_base_mat.coffee_table_base_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer_mat.coffee_table_drawer_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat.daybed_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat.throwrug_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_legs_mat.coffee_table_legs_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -307,6 +312,11 @@ MaterialExpressionTwoSidedSign="\"Object\" "
 MaterialExpressionTextureCoordinate="\"Object\" "
 MaterialExpressionComponentMask="\"Object\" "
 MaterialExpressionOneMinus="\"Object\" "
+EditPivotToolProperties="\"Object\" "
+InteractiveToolPropertySet="\"Object\" "
+EditPivotToolActionPropertySet="\"Object\" "
+MaterialExpressionReroute="\"Object\" "
+MaterialExpressionRerouteBase="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1844,8 +1854,25 @@ MaterialExpressionTextureCoordinate.MaterialExpression=True
 MaterialExpressionComponentMask.MaterialExpressionComponentMask=True
 MaterialExpressionComponentMask.MaterialExpression=True
 MaterialExpressionOneMinus.MaterialExpression=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.SkyLight=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+EditPivotToolProperties.Options=True
+EditPivotToolActionPropertySet.BoxPositions=True
+MaterialExpressionReroute.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_legs_mat.coffee_table_legs_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer_mat.coffee_table_drawer_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_base_mat.coffee_table_base_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/rustic_coffee_table.rustic_coffee_table;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G.orangeflower_G;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G.pinkflower_G;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S.pinkflower_S;
@@ -1862,10 +1889,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Brown.MI_Solid_Brown;
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Green.MI_Solid_Green;
 RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue;
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Red.MI_Solid_Red;
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Grey.MI_Solid_Grey;
-RecentlyPlaced=/Game/LevelPrototyping/Materials/MI_Solid_Yellow.MI_Solid_Yellow;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1959,26 +1982,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem2=/Game/StarterContent/Maps/StarterMap
-MRUItem3=/Game/OurProject/Maps/CabinInWoods
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
-MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
-MRUItem8=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
-MRUItem9=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
-MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S
-MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_S
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_G
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_S
-MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test2
-MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/test/test
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem7=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem8=/Game/StarterContent/Maps/StarterMap
+MRUItem9=/Game/OurProject/Maps/CabinInWoods
+MRUItem10=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/flower_material_Inst
+MRUItem11=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/pinkflower_G
+MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/orangeflower_S
+MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/blueflower_G
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_S
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/yellowflower_G
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_S
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/whiteflower_G
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_S
+MRUItem19=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/purpleflower_G
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2235,7 +2258,7 @@ bComputeWeightedNormals=True
 bReorderMaterialToFbxOrder=True
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=5.000000
+ImportUniformScale=10.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
@@ -2308,5 +2331,5 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
